# DirectX-Headers

./: .gitignore  Cargo.toml
.github/workflows/: ci.yml
.metadata/: generate.proj
.rust/api_gen/: Cargo.toml
.rust/api_gen/src/: main.rs
.rust/crate/: Cargo.toml
.rust/crate/src/: lib.rs
.rust/crate/src/Microsoft/: mod.rs
.rust/crate/src/Microsoft/DirectX/: mod.rs
.rust/crate/src/Microsoft/DirectX/Direct3D/: impl.rs  mod.rs
.rust/crate/src/Microsoft/DirectX/Direct3D12/: impl.rs  mod.rs
.rust/crate/src/Microsoft/DirectX/Dxgi/: mod.rs
.rust/crate/src/Microsoft/DirectX/Dxgi/Common/: mod.rs
include/directx/: d3d12.idl
