[package]
name = "microsoft-directx"
version = "0.0.0-alpha.3"
authors = ["Marijn Suijten <marijn@traverserearch.nl>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Rust bindings for the latest DirectX (Agility SDK) headers"
homepage = "https://github.com/Microsoft/DirectX-Headers"
repository = "https://github.com/MarijnS95/DirectX-Headers"

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = []

[dependencies.windows]
version = "0.48"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11on12",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Security",
]

[features]
implement = []
